examples/lifecycle/hello/hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-lifecycle
  labels:
    app: hello-lifecycle
spec:
  selector:
    app: hello-lifecycle
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-lifecycle
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-lifecycle
  template:
    metadata:
      labels:
        app: hello-lifecycle
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: lifecycle-container
          image: allir/hello-armulason:v1
          readinessProbe:
            exec:
              command: ['sh', '-c', 'echo $(date +%H:%M:%S): readinessProbe >> /timing && test -f /tmp/ready']
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 1
          lifecycle:
            postStart:
              exec:
                command: ['sh', '-c', 'echo $(date +%H:%M:%S): Main Container is Running | tee -a /timing && echo $(date +%H:%M:%S): postStart >> /timing && sleep 10 && touch /tmp/ready /tmp/live  && echo $(date +%H:%M:%S): end postStart >> /timing']
            preStop:
              exec:
                command: ['sh', '-c', 'echo $(date +%H:%M:%S): preStop >> /timing && sleep 10 && rm -f /tmp/ready /tmp/live && echo $(date +%H:%M:%S): end preStop >> /timing']
