examples/lifecycle/hello/hello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-lifecycle
  labels:
    app: hello-lifecycle
spec:
  rules:
    - host: lifecycle.allir.org
      http:
        paths:
        - path: /
          backend:
            serviceName: hello-lifecycle
            servicePort: 8080
